--- a/Src/AgileManifestoWidget/AgileManifestoWidget.csproj
+++ b/Src/AgileManifestoWidget/AgileManifestoWidget.csproj
@@ -47,6 +47,12 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app\configuration.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app\Scripts\configuration222.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
