--- a/Src/CovidWidget/CovidWidget.csproj
+++ b/Src/CovidWidget/CovidWidget.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{F19B92A1-5D7C-40BC-BFB5-5F15C1CFFD81}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AgileManifestoWidget</RootNamespace>
-    <AssemblyName>AgileManifestoWidget</AssemblyName>
+    <RootNamespace>CovidWidget</RootNamespace>
+    <AssemblyName>CovidWidget</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="Properties\AssemblyInfo.cs" />
-    <None Include="app\configuration.html" />
     <None Include="app\dashboard-widget.html" />
     <None Include="app\Content\site.css" />
     <None Include="app\Images\CatalogIcon.png" />
@@ -53,10 +52,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app\configuration.html" />
+    <None Include="artefacts\Screenshot2.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="artefacts\Screenshot2.png" />
+    <Content Include="app\Images\base.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
