--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 image: Visual Studio 2019
-branches: 
+branches:
   only:
     - master
 environment:
@@ -9,14 +9,14 @@ environment:
 install:
     - choco install "sonarscanner-msbuild-netcoreapp2.0" -y
 before_build:
-    - cmd: nuget restore Src/CovidWidget.sln
+    - cmd: nuget restore Src/AgileManifestoWidget.sln
     - dotnet tool install -g dotnet-sonarscanner
     # AppVeyor does not decrypt the secure env vars for PR builds (this prevents someone from submitting PR with malicious build script displaying those variables). So when AppVeyor initiates a Sonar analysis it immediately fails with error "The format of the analysis property sonar.login= is invalid". The only solution is to prevent PR builds initiating Sonar analysis using powershell. See https://medium.com/@stef.heyenrath/how-to-fix-sonarcloud-issue-in-a-github-pr-when-using-appveyor-integration-8909b49406b4    
-    - ps: 'if (-Not $env:APPVEYOR_PULL_REQUEST_NUMBER) { & dotnet sonarscanner begin /key:"CovidWidget" /d:"sonar.host.url=https://sonarcloud.io" /d:"sonar.login=$env:my_encrypted_sonarqube_token" /o:"gregtrevellick-github" }'
+    - ps: 'if (-Not $env:APPVEYOR_PULL_REQUEST_NUMBER) { & dotnet sonarscanner begin /key:"AgileManifestoWidget" /d:"sonar.host.url=https://sonarcloud.io" /d:"sonar.login=$env:my_encrypted_sonarqube_token" /o:"gregtrevellick-github" }'
 build:
-    project: Src/CovidWidget.sln
+    project: Src/AgileManifestoWidget.sln
     verbosity: minimal
-after_build: 
+after_build:
      - ps: 'if (-Not $env:APPVEYOR_PULL_REQUEST_NUMBER) { & dotnet sonarscanner end /d:"sonar.login=$env:my_encrypted_sonarqube_token" }' 
 notifications:
 - provider: Email
